--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
+
 apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.pngfi.bannerdemo"
         minSdkVersion 15
