--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:testOnly="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.pngfi.bdemo.MainActivity">
+        <!--<activity android:name="com.pngfi.bdemo.MainActivity">-->
+        <activity android:name=".GuideActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
