--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pngfi.bdemo">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:testOnly="false"
         android:supportsRtl="true"
+        android:testOnly="false"
         android:theme="@style/AppTheme">
-        <!--<activity android:name="com.pngfi.bdemo.MainActivity">-->
-        <activity android:name=".GuideActivity">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/default_guide_dot_view" />
+        <!-- <activity android:name="com.pngfi.bdemo.MainActivity"> -->
+        <activity
+            android:name=".GuideActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
